# claude-pet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.command  build.sh  claude_pet.spec  install.bat  install.command  install.sh  package.json  pyproject.toml
.github/workflows/: build.yml  test.yml
docs/: DECISIONS.md  RELEASE-0.3.0.md  RESEARCH-ERGONOMICS.md  RESEARCH-GITHUB.md  RESEARCH.md  index.html  robots.txt  sitemap.xml
src/claude_pet/: __init__.py  app.py  bot_svg.py  cli.py  context.py  distill.py  errors.py  hook.py  memory.py  panel.py  pet_config.py  server.py  skills.py
src/claude_pet/ergonomics/: __init__.py  config.py  exercises.py  overlay.py  scheduler.py  svg_inline.py  tracker.py
src/claude_pet/fitness/: __init__.py  body_map.py  coach.py  config.py  overlay.py  plan.py  scheduler.py  tracker.py
src/claude_pet/github_watch/: __init__.py  api.py  classify.py  config.py  notification.py  storage.py  watcher.py
src/claude_pet/reminders/: __init__.py  overlay.py  scheduler.py  store.py
tests/: test_audit_top5.py  test_context.py  test_context_isolation.py  test_delete_path_variants.py  test_delete_project.py  test_distill.py  test_doctor.py  test_e2e_two_session.py  test_ergonomics.py  test_fitness.py  test_fitness_ui.py  test_github_watch.py  test_graph_edges_and_stats.py  test_memory_deep.py  test_mute.py  test_reminders.py  test_skills.py  test_stale_restart.py  test_storage_v2.py  test_svg_inline.py  test_token_savings.py  test_ui.py
